--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Navigation Menu -->
     <nav>
       <ul>
-        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -21,6 +21,6 @@
     <h1>Home Page</h1>
     <p>Welcome to my website!</p>
     <h2>I am Reddappa M R</h2>
-    <p>You can download my resume <a href="Reddappa M R Resume.pdf">DOWNLOAD CV</a>.</p>
+    <p>You can download my resume <a href="Reddappa M R Resume.pdf">DOWNLOAD CV</a></p>
   </body>
 </html>
