--- a/portfolio.html
+++ b/portfolio.html
@@ -27,13 +27,13 @@
         <li>
           <a href="project1.html">
             <img src="project1.jpg" alt="Project 1">
-            <h2>Project 1 Title</h2>
+            <h2>Car price prediction</h2>
           </a>
         </li>
         <li>
           <a href="project2.html">
             <img src="project2.jpg" alt="Project 2">
-            <h2>Project 2 Title</h2>
+            <h2>Telco customer churn</h2>
           </a>
         </li>
       </ul>
