--- a/project1.html
+++ b/project1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Project 1 - Reddappa M R</title>
+    <title>Project 1 - Car price prediction</title>
 
     <link rel="stylesheet" href="style.css">
   </head>
@@ -19,9 +19,14 @@
         </ul>
       </nav>
     </header>
-
+    <div id="car-price-prediction">
+      <h2>Car Price Prediction Project</h2>
+      <p>This project uses regression algorithms to predict car prices based on features such as mileage, year, make, and model. The dataset was sourced from kaggle and pre-processed using pandas and numpy. And predicted the model</p>
+      <img src="car_price_prediction_chart.png" alt="Car Price Prediction Chart">
+      <p>Code for this project can be found on <a href="https://github.com/Reddappa-M-R/carprices">GitHub</a>.</p>
+    </div> 
     <main>
-      <h1>Project 1 Title</h1>
+      <h1>Car price prediction</h1>
 
       <img src="project1.jpg" alt="Project 1">
 
