--- a/project2.html
+++ b/project2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Project 2 - Reddappa M R</title>
+    <title>Project 2 - Telco customer churn</title>
 
     <link rel="stylesheet" href="style.css">
   </head>
@@ -19,9 +19,15 @@
         </ul>
       </nav>
     </header>
+    <div id="telco-customer-churn">
+      <h2>Telco Customer Churn</h2>
+      <p>This project uses classification algorithms to predict customer churn based on demographic and usage patterns. The dataset was sourced from kaggle and pre-processed using pandas and sklearn, predicted by the results.</p>
+      <img src="telco_customer_churn_chart.png" alt="Telco Customer Churn Chart">
+      <p>Code for this project can be found on <a href="https://github.com/Reddappa-M-R/Telco_Customer_churn">GitHub</a>.</p>
+    </div>
 
     <main>
-      <h1>Project 2 Title</h1>
+      <h1>Telco customer churn</h1>
 
       <img src="project2.jpg" alt="Project 2">
 
