--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <h1>Home Page</h1>
     <p>Welcome to my website!</p>
     <h2>I am Reddappa M R</h2>
+    <h2>Data Scientist</h2>
     <p>You can download my resume <a href="Reddappa M R Resume.pdf">DOWNLOAD CV</a></p>
   </body>
 </html>
