--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
     <h2>I am Reddappa M R</h2>
     <h2>Data Scientist</h2>
     <p>You can download my resume <a href="Reddappa M R Resume.pdf">DOWNLOAD CV</a></p>
+    <p>my linkedin url <a href="https://www.linkedin.com/in/r211/">LinkedIn</a></p>
   </body>
 </html>
