--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p>Welcome to my website!</p>
     <h2>I am Reddappa M R</h2>
     <h2>Data Scientist</h2>
-    <p>You can download my resume <a href="Reddappa M R Resume.pdf">DOWNLOAD CV</a></p>
+    <p>You can download my resume <a href="Reddappa M R.pdf">DOWNLOAD CV</a></p>
     <p>my linkedin url <a href="https://www.linkedin.com/in/r211/">LinkedIn</a></p>
   </body>
 </html>
