--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data Engineer and Aspiring Data Scientist</title>
+    <title>Data Engineer at UsefulBI and Aspiring Data Scientist</title>
   </head>
   <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -21,7 +21,7 @@
     <h1>Home Page</h1>
     <p>Welcome to my website!</p>
     <h2>I am Reddappa M R</h2>
-    <h2>Data Engineer and Aspiring Data Scientist</h2>
+    <h2>Data Engineer at UsefulBI and Aspiring Data Scientist</h2>
     <p>You can download my resume <a href="Reddappa M R.pdf">DOWNLOAD CV</a></p>
     <p>my linkedin url <a href="https://www.linkedin.com/in/r211/">LinkedIn</a></p>
   </body>
