--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h1>Home Page</h1>
     <p>Welcome to my website!</p>
     <h2>I am Reddappa M R</h2>
-    <h2>Data Engineer at UsefulBI and Aspiring Data Scientist</h2>
+    <h2>I am Data Engineer at UsefulBI and Aspiring Data Scientist</h2>
     <p>You can download my resume <a href="Reddappa M R CV.pdf">DOWNLOAD CV</a></p>
     <p>my linkedin url <a href="https://www.linkedin.com/in/r211/">LinkedIn</a></p>
   </body>
