--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     <h2>I am Reddappa M R</h2>
     <h2>I am Data Engineer at UsefulBI and Aspiring Data Scientist</h2>
     <p>You can download my resume <a href="Reddappa M R CV.pdf">DOWNLOAD CV</a></p>
-    <p>my linkedin url <a href="https://www.linkedin.com/in/r211/">LinkedIn</a></p>
+    <p>My linkedin account <a href="https://www.linkedin.com/in/r211/">LinkedIn</a></p>
   </body>
 </html>
