--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data Engineer at UsefulBI and Aspiring Data Scientist</title>
+    <title>I am an Artist</title>
   </head>
   <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -13,8 +13,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="databricks.html">Databricks</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
+        <!-- <li><a href="portfolio.html">Portfolio</a></li> -->
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -22,8 +21,8 @@
     <h1>Home Page</h1>
     <p>Welcome to my website!</p>
     <h2>I am Reddappa M R</h2>
-    <h2>I am Data Engineer at UsefulBI and Aspiring Data Scientist</h2>
-    <p>You can download my resume <a href="Reddappa M R CV.pdf">DOWNLOAD CV</a></p>
+    <h2>Art is the way of life.</h2>
+    <p>Please find youtube link <a href="https://www.youtube.com/@reddappartist">here</a></p>
     <p>My linkedin account <a href="https://www.linkedin.com/in/r211/">LinkedIn</a></p>
   </body>
 </html>
