--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
+        <!-- <li><a href="portfolio.html">Portfolio</a></li> -->
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -20,9 +20,8 @@
     <!-- About Me Section -->
     <section>
       <h1>About Me</h1>
-      <p>Hi, my name is Reddappa M R and I'm a Data Science Trainee. I have over 1 years of experience building M L algorithms and M L models.</p>
-      <p>My expertise includes Python, R, SQL, and Power BI. I'm also proficient in Azure.</p>
-      <p>In my free time, I enjoy reading and drawing .</p>
+      <p>Hi, my name is Reddappa M R and I'm an Artist. I have over 1 years of experience in pencil drawing.</p>
+      <p>My expertise includes traditional and digital art.</p>
     </section>
   </body>
 </html>
