--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>I am an Artist</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
-  <link rel="stylesheet" type="text/css" href="style.css">
 
   <body>
     <!-- Navigation Menu -->
@@ -17,12 +17,13 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
+
     <!-- Home Page -->
     <h1>Home Page</h1>
     <p>Welcome to my website!</p>
     <h2>I am Reddappa M R</h2>
     <h2>Art is the way of life.</h2>
-    <p>Please find youtube link <a href="https://www.youtube.com/@reddappartist">here</a></p>
-    <p>My linkedin account <a href="https://www.linkedin.com/in/r211/">LinkedIn</a></p>
+    <p>Please find YouTube link <a href="https://www.youtube.com/@reddappartist" target="_blank">here</a></p>
+    <p>My LinkedIn account <a href="https://www.linkedin.com/in/r211/" target="_blank">LinkedIn</a></p>
   </body>
 </html>
