--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>I am an Artist</title>
+    <title>I am Data Engineer</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
 
@@ -23,6 +23,7 @@
     <p>Welcome to my website!</p>
     <h2>I am Reddappa M R</h2>
     <h2>Art is the way of life.</h2>
+    <p>git link <a href="https://github.com/Reddappa-M-R/Reddappa-M-R" target="_blank">here</a></p>
     <p>Please find YouTube link <a href="https://www.youtube.com/@reddappartist" target="_blank">here</a></p>
     <p>My LinkedIn account <a href="https://www.linkedin.com/in/r211/" target="_blank">LinkedIn</a></p>
   </body>
