--- a/contact.html
+++ b/contact.html
@@ -15,14 +15,16 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
 <!--           <li><a href="portfolio.html">Portfolio</a></li> -->
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html">About Me</a></li>
         </ul>
       </nav>
     </header>
 
     <main>
       <h1>Contact Me</h1>
-
+      
+      <img src="your-image-name.jpg" alt="Description of image" width="300">
+      
       <form>
         <label for="name">Name: Reddappa M R</label>
         <p>To contact us, please send an email to <a href="mailto:reddymr2018@gmail.com">reddymr2018@gmail.com</a></p>
