--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
     <!-- About Me Section -->
     <section>
       <h1>About Me</h1>
+       <img src="/Gemini_Generated_Image_rusgd6rusgd6rusg.png" alt="logo" width="300">
       <p>Hi, my name is Reddappa M R and I'm an Artist. I have over 1 years of experience in pencil drawing.</p>
       <p>My expertise includes traditional and digital art.</p>
     </section>
