Update About Me section with new profession and experience

--- a/about.html
+++ b/about.html
@@ -21,8 +21,8 @@
     <section>
       <h1>About Me</h1>
        <img src="/Gemini_Generated_Image_rusgd6rusgd6rusg.png" alt="logo" width="300">
-      <p>Hi, my name is Reddappa M R and I'm an Artist. I have over 1 years of experience in pencil drawing.</p>
-      <p>My expertise includes traditional and digital art.</p>
+      <p>Hi, my name is Reddappa M R and I'm a Data Engineer I have over 2.5 years of experience in Data Engineer.</p>
+      <p>My expertise includes Python and Pyspark.</p>
     </section>
   </body>
 </html>
